--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="334dp"
+        android:layout_marginTop="358dp"
         android:background="@drawable/button_default"
         android:text="SCAN"
         android:textColor="#000000"
@@ -97,7 +97,7 @@
         android:id="@+id/stop_scan_button"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="334dp"
+        android:layout_marginTop="358dp"
         android:background="@drawable/button_default"
         android:text="STOP"
         android:textColor="#000000"
@@ -106,7 +106,8 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.497" />
 
 
 </android.support.constraint.ConstraintLayout>
